--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sass": "^1.29.0"
   },
   "scripts": {
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "deploy":"git subtree push --prefix dist origin gh-pages"
   },
   "author": "Roopam",
   "license": "ISC"
