--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "parcel ./src/index.html",
+    "build":"parcel ./src/index.html --public-url ./",
     "deploy":"git subtree push --prefix dist origin gh-pages"
   },
   "author": "Roopam",
